@@ -39,6 +39,18 @@
 			]
 		},
 		{
+			"path": "/asterisk/modules",
+			"description": "Asterisk modules",
+			"operations": [
+				{
+					"httpMethod": "GET",
+					"summary": "List Asterisk modules.",
+					"nickname": "listModules",
+					"responseClass": "List[Module]"
+				}
+			]
+		},
+		{
 			"path": "/asterisk/variable",
 			"description": "Global variables",
 			"operations": [
@@ -241,6 +253,37 @@
 					"required": false,
 					"type": "StatusInfo",
 					"description": "Info about Asterisk status"
+				}
+			}
+		},
+		"Module": {
+			"id": "Module",
+			"description": "Details of an Asterisk module",
+			"properties": {
+				"name": {
+					"type": "string",
+					"description": "The name of this module",
+					"required": true
+				},
+				"description": {
+					"type": "string",
+					"description": "The description of this module",
+					"required": true
+				},
+				"use_count": {
+					"type": "int",
+					"description": "The number of times this module is being used",
+					"required": true
+				},
+				"status": {
+					"type": "string",
+					"description": "The running status of this module",
+					"required": true
+				},
+				"support_level": {
+					"type": "string",
+					"description": "The support state of this module",
+					"required": true
 				}
 			}
 		},
